# SWPSoSe14

./: .gitignore  Anleitung Eclipse CDT mit Cpp11.txt  Doxyfile  Makefile  README.md  cpp infos.txt  cppReport.txt  fu-rail  rail  unittest_classfile_writer_test  unittest_constantpool  xmppTutorial.txt
Editor/: HowTo - TextEditor  Verknüpfung mit TextEditor
Editor/TextEditor/: ApplicationConsole.cpp  ApplicationConsole.h  ApplicationPreferences.cpp  ApplicationPreferences.h  ApplicationPreferencesDialog.cpp  ApplicationPreferencesDialog.h  ApplicationPreferencesDialog.ui  EditTableWidget.cpp  EditTableWidget.h  FileSelectLineEdit.cpp  FileSelectLineEdit.h  Graph_Interface.cpp  (+28 more)
Milestone 2/: Anforderungen+Zeitschätzung.odt  Zeitschätzung und Issue Verwaltung.odp
Milestone 3/: 04_editor.tex  main.tex
Organisatorisches/: Daily Scrums.ods
UnitTest/: github.txt
java-stack-lib/: Stack.java
konzepte/: BuildProzess.txt  Junktions.rtf  Railbefehle Uebersicht
projekt-compiler/: .cproject  .project
projekt-compiler/src/backend/unittest/: CMakeLists.txt  classfile_writer_test.cc  constant_pool_test.cc
rail-interpreter/: README  rail
test-cases/: digits.txt  no_dollarSign.txt  without_main.txt
tutorials/: Anleitung Eclipse CDT mit Cpp11.txt  EditorTutorial.txt  Qt5Tutorial.txt  doxygen.txt  eclipseCdt_Cpp11.txt  git linux tutorial zum arbeiten  xmppTutorial.txt
xTesting/: .gitignore  requirements.txt  tutorial.txt
xTestingDiagramm/: db_connect.php  diagramm.php  index.php  interface.php  interpreter.php  performance.php  query_auswertung.php  screencast.php
(+1299 files in other folders)
